[package]
name = "agdr-aki"
version = "1.8.1"
edition = "2021"
license = "Apache-2.0 OR CC0-1.0"
description = "Atomic Kernel Inference SDK for Phoenix v1.8.1 Ultra"
authors = ["Genesis Glass Foundation <founding@accountability.ai>"]
repository = "https://github.com/aiccountability-source/AgDR-Phoenix"
homepage = "https://accountability.ai"
keywords = ["accountability", "ai", "cryptographic", "audit", "compliance"]
categories = ["cryptography", "development-tools", "science"]

[lib]
name = "agdr_aki"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

# Cryptography
blake3 = { version = "1.5", features = ["rayon", "std"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"

# POSIX timing for tamper-resistant monotonic timestamps
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

